--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -1,13 +1,14 @@
 ﻿.buttons {
-  font-size: 30px;
+  font-size: 35px;
   margin: 10px;
   border-radius: 7px;
-  padding: 10px 10px 5px;
+  padding: 5px 10px 5px;
   color: rgb(255, 255, 255);
   background-color: rgba(0, 255, 98, 0.377);
   text-decoration: none;
   border: none;
   cursor: pointer;
+  font-family: 'Rowdies', cursive;
 }
 .buttons:hover {
   background-color: rgba(0, 255, 98, 0.568);
