Edited button style

--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -8,6 +8,7 @@
   text-decoration: none;
   border: none;
   cursor: pointer;
+  font-family: 'Rowdies', cursive;
 }
 .buttons:hover {
   background-color: rgba(0, 255, 98, 0.568);
